# nrf52840-mcuboot-ble-ota

./: .gitignore  README.md  west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  pm_static_nrf52840dk_nrf52840.yml  prj.conf  sysbuild.conf
app/src/: main.c
app/sysbuild/: CMakeLists.txt  mcuboot.conf
scripts/: build_two_and_flash_v1.ps1  build_two_and_flash_v1.sh  build_variant.ps1  build_variant.sh  flash_secondary_slot.ps1  flash_secondary_slot.sh  imgtool_sign.ps1  imgtool_sign.sh  setup_dev_keys.ps1  setup_dev_keys.sh
